Fixing color, text size, alignment

--- a/grails-app/assets/stylesheets/jquery-ui.css
+++ b/grails-app/assets/stylesheets/jquery-ui.css
@@ -116,7 +116,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 244px;
+	width: 241px;
 	cursor: default;
 }
 .ui-button {
@@ -473,12 +473,13 @@ button.ui-button::-moz-focus-inner {
 	/* support: IE10, see #8844 
 	list-style-image: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7");*/
 	margin: 0;
-padding: 0;
-zoom: 1;
-float: left;
-clear: left;
-width: 100%;
-background: red;
+	zoom: 1;
+	float: left;
+	clear: left;
+	width: 100%;
+	text-align: left;
+	font-size: 12px;
+/*background: #FFF;*/
 }
 .ui-menu .ui-menu-divider {
 	margin: 5px 0;
@@ -489,7 +490,7 @@ background: red;
 }
 .ui-menu .ui-state-focus,
 .ui-menu .ui-state-active {
-	margin: -1px;
+	/*margin: -1px;*/
 	background: grey;
 }
 
@@ -899,7 +900,7 @@ body .ui-tooltip {
 	/*background: #fdf5ce url("images/ui-bg_glass_100_fdf5ce_1x400.png") 50% 50% repeat-x;
 	font-weight: bold;*/
 	color: black;
-	background: grey;
+	background: #D8D8D8;
 	font-size: 12px;
 	border-radius: 0;
 	outline: none;
@@ -1210,25 +1211,25 @@ body .ui-tooltip {
 .ui-corner-top,
 .ui-corner-left,
 .ui-corner-tl {
-	border-top-left-radius: 4px;
+	/*border-top-left-radius: 4px;*/
 }
 .ui-corner-all,
 .ui-corner-top,
 .ui-corner-right,
 .ui-corner-tr {
-	border-top-right-radius: 4px;
+	/*border-top-right-radius: 4px;*/
 }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-left,
 .ui-corner-bl {
-	border-bottom-left-radius: 4px;
+	/*border-bottom-left-radius: 4px;*/
 }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-right,
 .ui-corner-br {
-	border-bottom-right-radius: 4px;
+	/*border-bottom-right-radius: 4px;*/
 }
 
 /* Overlays */
