--- a/grails-app/assets/stylesheets/reviews.css
+++ b/grails-app/assets/stylesheets/reviews.css
@@ -39,13 +39,15 @@
 
 .searchBox {
 	width: 215px;
-	padding: 1px, 0;
+	/*padding: 1px, 0px, 0px, 2px;*/
+	padding-left: 2px;
 	vertical-align: middle;
 	font-size: 12px;
 	line-height: 1.3em;
 	text-align: left;
 	border: none;
 	outline: none;
+	
 }
 
 .searchSubmit {
